--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -20,6 +20,7 @@
 }
 @media screen and (min-width: 1280px) {
     .header {
-        width: 1184px;
+        max-width: 1184px;
+        width: 100%;
     }
 }
