--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,5 +1,23 @@
 .intro__list {
     list-style-type: none;
-    margin-top: 32px;
+    margin-top: 15px;
     padding: 0;
+}
+@media screen and (min-width: 768px) {
+    .intro__list {
+        font-size: 54px;
+        margin-top: 17px;
+        margin-bottom: 7px;
+    }
+}
+@media screen and (min-width: 1024px){
+    .intro__list {
+        margin-top: 17px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .intro__list{
+        margin-top: 15px;
+    }
 }
