--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,5 @@
 .intro__title {
-    margin: 0 0 40px;
+    margin: 0 0 26px;
     font-size: 32px;
     line-height: 109%;
 }
@@ -7,11 +7,16 @@
 @media screen and (min-width: 768px) {
     .intro__title {
         font-size: 54px;
-        margin-bottom: 38px;
+        margin-bottom: 22px;
     }
 }
 @media screen and (min-width: 1024px) {
     .intro__title {
-        margin-bottom: 37px;
+        margin-bottom: 20px;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .intro__title{
+        margin-bottom: 20px;
     }
 }
