--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,20 +1,22 @@
 .intro {
-    margin: 64px 5%;
+    margin: 64px 5% 0;
 }
 
 @media screen and (min-width: 768px) {
     .intro {
-        margin: 90px 24px;
+        margin: 90px 24px 80px;
     }
 }
 @media screen and (min-width: 1024px){
     .intro {
-        width: 690px;
-        margin: 95px 48px;
+        max-width: 690px;
+        margin: 95px 48px 80px;
     }
 }
 @media screen and (min-width: 1280px) {
     .intro {
-        margin: 93px 149px;
+        max-width: 984px;
+        width: 100%;
+        margin: 93px auto 80px;
     }
 }
