--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -10,12 +10,12 @@
 @media screen and (min-width: 1024px) {
     .lead__image {
         margin: 56px 48px 5px; 
-        width: 928px;
+        max-width: 928px;
     }
 }
 @media screen and (min-width: 1280px) {
     .lead__image {
-        margin: 65px 150px 5px;
-        width: 984px;
+        margin: 65px auto 5px auto;
+        max-width: 984px;
     }
 }
