--- a/blocks/place/__cell/place__cell.css
+++ b/blocks/place/__cell/place__cell.css
@@ -26,3 +26,13 @@
     margin-top: 0px;
     }
 }
+@media screen and (min-width: 1280px) {
+    .place__cell {
+        grid-template-columns: 460px 1fr;
+        column-gap: 10px;
+        row-gap: 52px;    
+    }
+    .place__cell:last-child {
+    margin-top: 0px;
+    }
+}
