--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,12 +4,18 @@
     line-height: 35px;
     text-align: center;
     width: 90%;
-    margin: 0 5% 16px;
+    margin: 0 auto 16px;
 } 
 @media screen and (min-width: 768px) {
     .cover__title {
         font-size: 72px;
         line-height: 76px;
-        margin: 0 5% 32px;
+        margin: 0 auto 32px;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .cover__title {
+        max-width: 560px;
+        margin: 0 auto 32px;
     }
 }
