--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,3 +7,9 @@
     position: relative;
     z-index: 1;
 }
+@media screen and (min-width: 1280px) {
+    .cover {
+        max-width: 1184px;
+        margin: 65px auto;
+    }
+}
