--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,3 +9,14 @@
         margin-top: 2px;  
     }
 }
+@media screen and (min-width: 1024px) {
+    .footer__copyright {
+        margin-top: 10px;
+        margin-right: 80px;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .footer__copyright {
+        margin-top: 10px;
+    }   
+}
