--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,6 +4,11 @@
     font-size: 24px;
     line-height: 24px;
 }
+.footer__link:hover {
+    transition: opacity 3s,  transform 3s;
+    opacity: 0.3;
+}
+
 @media screen and (min-width: 768px) {
     .footer__link {
         font-size: 16px;
