--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -18,3 +18,8 @@
         margin-left: 25px;
     }
 }
+@media screen and (min-width: 1280px) {
+    .footer__links {
+        margin: 27px auto;
+    }
+}
