--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,20 +1,29 @@
 .footer{
-    margin: 65px 118px 24px 5%;
+    margin: 65px 118px 5px 5%;
     display: flex;
     flex-direction: column;
-    gap: 34px;
+    gap: 32px;
 }
 @media screen and (min-width: 768px) {
     .footer {
         flex-direction: row;
+        align-items: center;
         margin: 88px 0 10px 23px;
         gap: 70px;
     }
 }
 @media screen and (min-width: 1024px) {
     .footer {
-        margin: 94px 0 0 23px;
-        gap: 278px;
+        margin-top: 94px;
+        justify-content: space-between;
+        align-items: center;
     }
 
+}
+@media screen and (min-width: 1280px) {
+    .footer {
+        justify-content: space-between;
+        margin: 0 auto;
+        max-width: 1184px;
+    }
 }
