--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-    margin: 50px 5% 57px;
+    margin: 50px 5% 55px;
 
 }
 @media screen and (min-width: 768px) {
@@ -10,5 +10,11 @@
 @media screen and (min-width: 1024px) {
     .photo-grid {
         margin: 64px 50px 66px;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .photo-grid {
+        max-width: 1184px;
+        margin: 64px auto 66px;
     }
 }
