--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,19 +5,21 @@
 }
 @media screen and (min-width: 768px) {
     .place {
-        width: 720px;
+        max-width: 720px;
         row-gap: 73px;
         margin: 86px auto;
     }
 }
 @media screen and (min-width: 1024px) {
     .place {
-        width: 928px;
+        max-width: 928px;
+        row-gap: 73px;
     }
 
 }
 @media screen and (min-width: 1280px)  {
     .place {
         max-width: 984px;
+        row-gap: 70px;
     }
 }
