--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,5 +1,10 @@
 .place__text {
     display: flex;
     flex-direction: column;
-    row-gap: 25px;
+    margin: 0 16px;
+}
+@media screen and (min-width: 768px){
+    .place__text {
+        margin: 0;
+    }
 }
