--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,15 +2,15 @@
     position: relative;
     font-size: 14px;
     line-height: 16px;
+    font-weight: 400;
     text-align: center;
-    width: 90%;
+    max-width: 90%;
     margin: 0 auto;
 }
 @media screen and (min-width: 768px){
     .cover__subtitle {
         font-size: 18px;
         line-height: 22px;
-        width: 360px;
-        text-align: center;
+        max-width: 360px;
     }
 } 
