--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,6 +2,7 @@
     position: relative;
     font-size: 32px;
     line-height: 35px;
+    font-weight: 900;
     text-align: center;
     width: 90%;
     margin: 0 auto 16px;
@@ -16,6 +17,5 @@
 @media screen and (min-width: 1280px) {
     .cover__title {
         max-width: 560px;
-        margin: 0 auto 32px;
     }
 }
