--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,7 +3,7 @@
     margin-right: 15px;
     width: 22px;
     height: 20px;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 20px;
 }
