--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,8 +2,8 @@
     margin: 0 0 26px;
     font-size: 32px;
     line-height: 109%;
+    font-weight: 900;
 }
-
 @media screen and (min-width: 768px) {
     .intro__title {
         font-size: 54px;
@@ -12,11 +12,6 @@
 }
 @media screen and (min-width: 1024px) {
     .intro__title {
-        margin-bottom: 20px;
-    }
-}
-@media screen and (min-width: 1280px) {
-    .intro__title{
         margin-bottom: 20px;
     }
 }
