--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,7 +3,7 @@
    margin: 0 14px;
    font-size: 16px;
    line-height: 20px;
-   font-weight: normal;
+   font-weight: 400;
    text-align: center;
 }
 @media screen and (min-width: 768px) {
