--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,7 +4,7 @@
     text-align: center;
     font-size: 40px;
     line-height: 44px;
-    font-weight: bold;
+    font-weight: 900;
 }
 @media screen and (min-width: 768px) {
     .lead__title {
