--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,18 +1,18 @@
 .place__paragraph {
-    margin: 0 5%;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
-
+    margin-top: 6px;
 }
 @media screen and (min-width: 768px) {
     .place__paragraph {
-        width: 352px;
+        margin-top: 0;
+        max-width: 352px;
     }
 }
 @media screen and (min-width: 1024px) {
     .place__paragraph {
-        width: 456px;
+        max-width: 456px;
         font-size: 18px;
         line-height: 29.34px;
     }
