--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,20 +3,23 @@
     font-size: 32px;
     font-weight: 900;
     line-height: 35px;
-    margin: 0 5%;
+    margin: 0;
+    margin-left: 16px;
 }
 @media screen and (min-width: 768px) {
     .place__title {
         font-size: 42px;
         line-height: 46px;
-        margin: 0;
-        width: 330px;
+        max-width: 330px;
+        width: 100%;
+        margin-left: 0;
     }
 }
 @media screen and (min-width: 1024px){
     .place__title {
         font-size: 72px;
         line-height: 76px;
-        padding-bottom: 3px;
+        padding-bottom: 12px;
+        max-width: 440px;
     }
 } 
