--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,8 +1,9 @@
 .place__website {
-    margin: 0 5%;
+    margin-left: 16px;
 }
 @media screen and (min-width: 768px) {
     .place__website{
         align-self: flex-end;
+        margin-left: 0px;
     }
 }
