--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,20 +8,20 @@
     .footer {
         flex-direction: row;
         align-items: center;
-        margin: 75px 0 0px 23px;
+        margin: 75px 24px 0;
         gap: 70px;
     }
 }
 @media screen and (min-width: 1024px) {
     .footer {
-        margin-top: 78px;
+        margin: 77px 48px 24px;
         justify-content: space-between;
     }
 
 }
 @media screen and (min-width: 1280px) {
     .footer {
-        margin: 0 auto;
+        margin: 77px 48px 24px;
         max-width: 1184px;
     }
 }
