--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,21 +1,21 @@
 .footer__copyright {
     font-size: 14px;
     line-height: 14px;
+    margin-top: 15px;
 }
 @media screen and (min-width: 768px){
     .footer__copyright {
-        line-height: 16px;
-        margin-top: 13px;  
+        line-height: 16px; 
     }
 }
 @media screen and (min-width: 1024px) {
     .footer__copyright {
-        margin-right: 78px;
+        margin-right: 30px;
     }
 }
 @media screen and (min-width: 1280px) {
     .footer__copyright {
-        margin-top: 15px;
-        margin-right: 31px;
+        margin: 0;
+        margin-bottom: 24px;
     }   
 }
