--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -13,13 +13,8 @@
         gap: 19px;
     }
 }
-@media screen and (min-width: 1024px) {
-    .footer__links {
-        margin-left: 25px;
-    }
-}
 @media screen and (min-width: 1280px) {
     .footer__links {
-        margin: 27px auto;
+        margin-bottom: 24px;
     }
 }
