--- a/blocks/place/__cell/place__cell.css
+++ b/blocks/place/__cell/place__cell.css
@@ -19,13 +19,15 @@
 }
 @media screen and (min-width: 1024px) {
     .place__cell {
-        grid-template-columns: 440px 1fr; 
+        grid-template-columns: 440px 1fr;
+        row-gap: 48px;
+        column-gap: 32px;
     }
 }
 @media screen and (min-width: 1280px) {
     .place__cell {
         grid-template-columns: 0.95fr  1fr;
         row-gap: 52px;
-        column-gap: 30px;  
+        column-gap: 40px;  
     }
 }
