--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,6 +6,8 @@
 @media screen and (min-width: 768px){
     .footer__copyright {
         line-height: 16px; 
+        margin-left: 30px;
+        margin-top: 13px;
     }
 }
 @media screen and (min-width: 1024px) {
