--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 .header__lang-link {
     display: inline;
     margin-right: 15px;
-    width: 22px;
-    height: 20px;
+    max-width: 22px;
+    width: 100%;
     font-weight: 400;
     font-size: 18px;
     line-height: 20px;
