--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,12 +9,14 @@
 @media screen and (min-width: 768px) {
     .header {
         margin: 25px 24px 0px;
-        width: 720px;
+        max-width: 720px;
+        width: 100%;
     }
 }
 @media screen and (min-width: 1024px){
     .header {
-        width: 928px;
+        max-width: 928px;
+        width: 100%;
         margin: 25px auto;
     }
 }
