--- a/blocks/intro/__box/intro__box.css
+++ b/blocks/intro/__box/intro__box.css
@@ -3,13 +3,9 @@
     flex-direction: column;
     align-items: flex-start;
 }
-
-
-
-
-
 @media screen and (min-width: 1280px) {
     .intro__box {
-        width: 690px;
+        max-width: 690px;
+        width: 100%;
     }
 }
