--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,6 @@
 .page {
+    min-width: 320px;
+    max-width: 1280px;
     width: 100%;
     margin: 0 auto;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
